--- a/Sentiment_Analysis0.ipynb
+++ b/Sentiment_Analysis0.ipynb
@@ -477,7 +477,7 @@
         "    \"\"\"Main function to run the analysis\"\"\"\n",
         "\n",
         "    # Initialize analyzer (you need to provide your Twitter Bearer Token)\n",
-        "    BEARER_TOKEN = \"AAAAAAAAAAAAAAAAAAAAAK6M2AEAAAAAQoK9YCIxMBJ8VdJxJU%2FWuGagnvE%3Dfnq6lE7pZivykcNMmLXaLEvknANqS4HXA1gZZZq8QSAOODynVA\"\n",
+        "    BEARER_TOKEN = \""\n",
         "    analyzer = TwitterSentimentAnalyzer(BEARER_TOKEN)\n",
         "\n",
         "    # Run analysis\n",
